[package]
name = "loss-tester-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
cobs = "0.2.3"
ctrlc = "3.4.2"
net2 = "0.2.39"
smol = { version = "2", optional = true }
spin_sleep = "1.1.1"
thiserror = "1.0.53"

[features]
default = ["async"]
async = ["dep:smol"]